--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fslightbox-react": "^1.7.6",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/fslightbox-react": "^1.7.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
